syntax = "proto3";

package accounts;

option go_package = "./accounts";

import "google/api/annotations.proto";

message AccountRequest {
    string email = 1;
    string password = 2;
}

message AccountResponse {
    string email = 1;
}

service AccountService {
    rpc CreateAccountGrpc (AccountRequest) returns (AccountResponse) {
        option (google.api.http) = {
            post: "/api/v1/accounts"
            body: "*"
          };
    };
}